# WebSpotify

./: README.md  config.py  demo.py  endpoints.json  helper_functions.py  main.py  navbar.py  parseJSON.py  pyproject.toml  requirements.txt  spotifyAPI.py  test.py
application/: __init__.py  auth.py  helper_functions.py  navbar.py  parseJSON.py  routes.py  spotifyAPI.py
application/analytics/: analytics.py
application/analytics/templates/: songanalysis.html
application/home/: routes.py
application/home/templates/: callback.html  viewplaylists.html
application/static/css/: bootstrap.min.css  cover.css  css-circular-prog-bar.css  style.css
application/static/js/: search.js
application/templates/: error.html  index.html  login.html  playlistdata.html  search.html  songanalysis.html
static/: cover.css  recommendations.js  search.js  style.css
static/css/: bootstrap.min.css  cover.css  style.css
static/js/: search.js
templates/: callback.html  error.html  index.html  login.html  playlistdata.html  recommend.html  recommendedplaylist.html  search.html  song_analysis_mock.html  songanalysis.html  viewplaylists.html  youtubespotify.html
tests/: test_demo.py  test_helper_functions.py
